# sceua

./: .gitignore  AI_POLICY.md  CHANGELOG.md  CITATION.html  Cargo.toml  Justfile  LICENSE.html  README.md  freeze.rds  index.html  justfile  pkgdown.yml  robots.txt  rust_crate.html  search.json  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: R-CMD-check.yaml  ci.yaml  docs.yaml  rust-cd.yaml
man/: sceua.html
paper/: .gitignore  AI_DISCLOSURE.md  COVER_LETTER.qmd  README.qmd  case_study.qmd
r/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE.md  README.md  bootstrap.R  cran-comments.md  jarl.toml
r/R/: sceua.R
r/altdoc/: quarto_website.yml  rust_crate.md
r/man/: sceua.Rd
r/src/: Makevars  Makevars.in  Makevars.win.in  entrypoint.c
r/src/rust/: Cargo.toml  vendor.tar.xz
r/src/rust/src/: lib.rs
r/tests/testthat/: test-sceua.R
r/vignettes/: benchmarks.qmd  sceua.Rmd
rust/: Cargo.toml  README.md
rust/benches/: benchmark.rs
rust/src/: benchmarks.rs  cce.rs  config.rs  error.rs  lib.rs  population.rs  rng.rs  sce.rs  structs.rs
vignettes/: benchmarks.html
