[workspace]
resolver = "2"
members = [
  # extendr crate
  "r/src/rust",
  "rust"
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.91.1"

[workspace.dependencies]
sceua = { path = "rust" }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = true
codegen-units = 1
