[workspace]
resolver = "2"
members = [
  # extendr crate
  "r/src/rust",
  "rust"
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.81"

[workspace.dependencies]
sceua = { path = "rust" }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
strip = "symbols"
incremental = false
