[package]
name = "sceua"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shuffled Complex Evolution - University of Arizona global optimizer"
license = "MIT OR Apache-2.0"
keywords = ["optimization", "sce", "sce-ua", "duan"]
categories = ["algorithms", "science"]

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = []
parallel = ["dep:rayon"]

[dependencies]
rayon = { version = "1.11", optional = true }
