[package]
name = "sceua"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shuffled Complex Evolution - University of Arizona global optimizer"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/atsyplenkov/sceua"
documentation = "https://docs.rs/sceua"
keywords = ["optimization", "sce", "sce-ua", "duan"]
categories = ["algorithms", "science"]

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = []
parallel = ["dep:rayon"]

[dependencies]
rayon = { version = "1.11", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
