[package]
name = "sceua"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shuffled Complex Evolution - University of Arizona global optimizer"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/atsyplenkov/sceua"
documentation = "https://docs.rs/sceua"
keywords = ["optimization", "sce", "sce-ua", "duan"]
categories = ["algorithms", "science"]

[lib]
crate-type = ["lib", "staticlib"]

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = [
  "cargo_bench_support",
  "html_reports",
  "plotters",
] }

[[bench]]
name = "benchmark"
harness = false
